force-app/main/default/objects/Pago__c/Pago__c.object-meta.xml
<CustomObject>
    <label>Plan de pagoSSS</label>
    <nameField>
        <label>Nombre de Pago</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planes de pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>