force-app/main/default/objects/Pago__c/fields/Endoso__c.field-meta.xml
<CustomField>
    <fullName>Endoso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endoso</label>
    <referenceTo>Endoso__c</referenceTo>
    <relationshipName>Planes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>