force-app/main/default/objects/Pago__c/fields/Es_Plan_Endoso__c.field-meta.xml
<CustomField>
    <fullName>Es_Plan_Endoso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es plan endoso?</label>
    <type>Checkbox</type>
</CustomField>