force-app/main/default/objects/Pago__c/fields/Estatus_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_pago__c</fullName>
    <label>Estatus de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>