force-app/main/default/objects/Pago__c/fields/Modalidad_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_de_pago__c</fullName>
    <label>Modalidad de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>