force-app/main/default/objects/Pago__c/fields/Monto_por_pago__c.field-meta.xml
<CustomField>
    <fullName>Monto_por_pago__c</fullName>
    <label>Monto por pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>