force-app/main/default/objects/Pago__c/fields/MontoTotal__c.field-meta.xml
<CustomField>
    <fullName>MontoTotal__c</fullName>
    <label>Monto total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>