force-app/main/default/objects/Pago__c/fields/Numero_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pagos__c</fullName>
    <label>Número de pagos</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>