force-app/main/default/objects/Pago__c/fields/Plan_anterior__c.field-meta.xml
<CustomField>
    <fullName>Plan_anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan anterior</label>
    <referenceTo>Pago__c</referenceTo>
    <relationshipName>Planes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>