force-app/main/default/objects/Pago__c/fields/Plan_confirmado__c.field-meta.xml
<CustomField>
    <fullName>Plan_confirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Plan confirmado?</label>
    <type>Checkbox</type>
</CustomField>