force-app/main/default/objects/Pago__c/fields/Poliza__c.field-meta.xml
<CustomField>
    <fullName>Poliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza</label>
    <referenceTo>Poliza__c</referenceTo>
    <relationshipName>Planes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>