force-app/main/default/objects/Pago__c/fields/Saldo_pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_pendiente__c</fullName>
    <label>Saldo pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>