force-app/main/default/objects/Pago__c/validationRules/BloquearCambiosActivo.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearCambiosActivo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Estatus_de_pago__c, &quot;Activo&quot;),
OR(
ISCHANGED( Modalidad_de_pago__c ),
ISCHANGED( Numero_de_pagos__c ),
ISCHANGED( Fecha_de_inicio__c )
))</errorConditionFormula>
    <errorMessage>No puedes modificar el plan cuando está activo</errorMessage>
</ValidationRule>